--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "cn.edu.scau.cmi.rgbstudy"
+        applicationId "cn.edu.scau.cmi.colorCheck"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
@@ -27,7 +27,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.dingmouren.colorpicker:colorpicker:1.0.1'
+    implementation 'com.dingmouren.colorpicker:colorpicker:1.0.1'
     implementation 'com.android.support:cardview-v7:25.0.0'
     implementation 'com.android.support:recyclerview-v7:25.3.1'
 
