--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,15 +33,27 @@
         </activity>
         <activity android:name=".activity.SampleCollectActivity" />
         <activity android:name=".activity.Main2Activity4Test" />
-        <activity android:name=".activity.CheckActivity" />
+        <activity android:name=".activity.PointCheckActivity" />
         <activity android:name=".activity.ProjectActivity" />
         <activity android:name=".activity.ProjectAddActivity" />
         <activity android:name=".activity.RuleGenerateByCustomActivity" />
         <activity android:name=".activity.RuleGenerateByMachineLearningActivity" />
         <activity android:name=".activity.ManualActivity" />
         <activity
-            android:name=".activity.CheckDetailActivity"
-            android:label="@string/title_activity_check_detail"></activity>
+            android:name=".activity.PointCheckDetailActivity"
+            android:label="@string/title_activity_check_detail" />
+        <activity
+            android:name=".activity.TestBasicActivity"
+            android:label="@string/title_activity_test_basic"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activity.PictureCheckActivity"
+            android:label="@string/title_activity_picture_check"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activity.PictureCheckResultActivity"
+            android:label="@string/title_activity_picture_check_result"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
