(1) move useless class to olderVersion package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,14 +34,14 @@
         </activity>
         <activity android:name=".activity.collect.PointSampleCollectActivity" />
         <activity android:name=".activity.test.Main2Activity4Test" />
-        <activity android:name=".activity.check.PointCheckActivity" />
+        <activity android:name=".olderVersion.PointCheckActivity" />
         <activity android:name=".activity.ProjectListActivity" />
         <activity android:name=".activity.ProjectAddActivity" />
         <activity android:name=".activity.CustomizeRuleActivity" />
         <activity android:name=".activity.MachineLearningRuleActivity" />
         <activity android:name=".activity.ManualActivity" />
         <activity
-            android:name=".activity.check.PointCheckDetailActivity"
+            android:name=".olderVersion.PointCheckDetailActivity"
             android:label="@string/title_activity_check_detail" />
         <activity
             android:name=".activity.test.TestBasicActivity"
@@ -56,7 +56,7 @@
             android:label="@string/title_activity_picture_check_result"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.collect.PictureSampleCollectActivity"
+            android:name=".olderVersion.PictureSampleCollectActivity"
             android:label="@string/title_activity_picture_sample_collect"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
