--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,8 @@
         <activity android:name=".olderVersion.PointSampleCollectActivity" />
         <activity android:name=".activity.toBeDone.Main2Activity4Test" />
         <activity android:name=".olderVersion.PointCheckActivity" />
-        <activity android:name=".activity.ProjectActivity" />
-        <activity android:name=".activity.ProjectAddActivity" />
+        <activity android:name=".activity.ItemActivity" />
+        <activity android:name=".activity.ItemAddActivity" />
         <activity android:name=".activity.toBeDone.CustomizeRuleActivity" />
         <activity android:name=".activity.toBeDone.MachineLearningRuleActivity" />
         <activity android:name=".activity.toBeDone.ManualActivity" />
